[package]
name = "tr"
version = "0.1.7"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
description = "tr! macro for localisation"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/woboq/tr"
documentation = "https://docs.rs/tr"
keywords = ["internationalization", "translation", "l10n", "i18n", "gettext"]
categories = ["internationalization", "localization"]
edition = "2018"

[features]
default = ["gettext"]

[dependencies]
lazy_static = "1.2"
gettext-rs = { version = "0.7", optional = true, features = ["gettext-system"] }
gettext = { git = "https://github.com/cameronbraid/gettext-rs.git", branch = "pub-message", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "full"] }
